src/trusted/validator_arm/testdata/bad/invalid_stores.dis
       0:	e7810002 		str	r0, [r1, r2]
       4:	e7a10002 		str	r0, [r1, r2]!
       8:	e7810022 		str	r0, [r1, r2, lsr #32]
       c:	e3c11480 		bic	r1, r1, #-2147483648
      10:	e5810042 		str	r0, [r1, #66]
      14:	e5810042 		str	r0, [r1, #66]
      18:	e3c11480 		bic	r1, r1, #-2147483648
      1c:	e5810042 		str	r0, [r1, #66]
      20:	e3c00480 		bic	r0, r0, #-2147483648
      24:	e5810042 		str	r0, [r1, #66]
      28:	03c11480 	(eq)	bic	r1, r1, #-2147483648
      2c:	e5810042 		str	r0, [r1, #66]
